# coral

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  clippy.toml
.github/: CODEOWNERS
.github/scripts/: prepare_release.py  pyproject.toml  test_prepare_release.py  test_prepare_release_integration.py
.github/workflows/: build-timings.yml  pr-coverage.yml  pr-title.yml  release.yml  validate.yml
crates/coral-api/: Cargo.toml  build.rs
crates/coral-api/proto/coral/v1/: catalog.proto  query.proto  resources.proto  sources.proto
crates/coral-api/src/: lib.rs
crates/coral-app/: AGENTS.md  Cargo.toml  build.rs
crates/coral-app/src/: lib.rs
crates/coral-app/src/bootstrap/: consts.rs  env.rs  error.rs  mod.rs  server.rs
crates/coral-app/src/query/: manager.rs  mod.rs  service.rs
crates/coral-app/src/sources/: catalog.rs  manager.rs  mod.rs  model.rs  service.rs
crates/coral-app/src/state/: config.rs  layout.rs  mod.rs  secrets.rs
crates/coral-app/src/storage/: fs.rs  mod.rs
crates/coral-app/src/telemetry/: config.rs  metrics.rs  mod.rs
crates/coral-app/src/workspaces/: manager.rs  mod.rs
crates/coral-app/tests/: local_mode.rs
crates/coral-cli/: AGENTS.md  Cargo.toml
crates/coral-cli/src/: branding.rs  lib.rs  main.rs  onboard.rs  source_ops.rs
crates/coral-cli/tests/: lint.rs  onboard.rs
crates/coral-client/: Cargo.toml
crates/coral-client/src/: client.rs  error.rs  lib.rs  local.rs
crates/coral-engine/: AGENTS.md  Cargo.toml
crates/coral-engine/src/: lib.rs
crates/coral-engine/src/backends/: common.rs  mod.rs
crates/coral-engine/src/backends/http/: client.rs  error.rs  mod.rs  provider.rs
crates/coral-engine/src/backends/jsonl/: mod.rs
crates/coral-engine/src/backends/parquet/: mod.rs
crates/coral-engine/src/backends/shared/: filter_expr.rs  json_exec.rs  json_path.rs  mapping.rs  mod.rs
crates/coral-engine/src/contracts/: catalog.rs  error.rs  mod.rs  query.rs  query_error.rs
crates/coral-engine/src/needles/: error.rs  loader.rs  mod.rs  provider.rs  tracker.rs
crates/coral-engine/src/runtime/: catalog.rs  mod.rs  query.rs  registry.rs  registry_tests.rs  schema_provider.rs
crates/coral-engine/tests/: engine.rs
crates/coral-engine/tests/engine/: catalog_tests.rs  harness.rs  http_tests.rs  jsonl_tests.rs  parquet_tests.rs  test_source_tests.rs
crates/coral-mcp/: AGENTS.md  Cargo.toml
crates/coral-mcp/src/: error.rs  guide_template.md  lib.rs  server.rs  surface.rs  tests.rs
crates/coral-spec/: AGENTS.md  Cargo.toml
crates/coral-spec/src/: common.rs  error.rs  inputs.rs  lib.rs  loader.rs  parser.rs  schema.rs  template.rs  validate.rs
crates/coral-spec/src/backends/: file.rs  http.rs  mod.rs
crates/coral-spec/src/schema/: source_manifest.schema.json
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: AGENTS.md  README.md  docs.json  global.css  index.mdx
docs/concepts/: runtime-and-mcp.mdx  sources-and-workspaces.mdx  system-catalog.mdx
docs/contributors/: architecture.mdx
docs/getting-started/: installation.mdx  quickstart.mdx
docs/guides/: advanced-cli-queries.mdx  agent-usage.mdx  manage-sources.mdx  use-coral-over-mcp.mdx  write-a-custom-source.mdx
docs/reference/: bundled-sources.mdx  cli-reference.mdx  source-spec-reference.mdx
scripts/: coverage-summary.sh  install.sh
skills/coral/: SKILL.md
sources/clickup/: manifest.yaml
sources/datadog/: manifest.yaml
sources/github/: README.md
sources/gitlab/: README.md  manifest.yaml
sources/incident_io/: manifest.yaml
sources/intercom/: manifest.yaml
sources/jira/: README.md  jira-auth.sh  manifest.yaml
sources/launchdarkly/: manifest.yaml
sources/linear/: manifest.yaml
sources/openobserve/: README.md  manifest.yaml
sources/otel/: manifest.yaml
sources/pagerduty/: README.md  manifest.yaml
sources/posthog/: manifest.yaml
sources/sentry/: manifest.yaml
sources/slack/: manifest.yaml
sources/statusgator/: manifest.yaml
sources/stripe/: manifest.yaml
