[package]
name = "coral-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
arrow.workspace = true
bytes.workspace = true
datafusion.workspace = true
futures.workspace = true
glob.workspace = true
httpdate.workspace = true
object_store.workspace = true
parquet.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
urlencoding.workspace = true

coral-spec.workspace = true

[dev-dependencies]
tempfile.workspace = true
