[package]
name = "coral-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rmcp.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true

coral-api.workspace = true
coral-client.workspace = true

[dev-dependencies]
coral-app.workspace = true
tempfile.workspace = true
