[package]
name = "coral-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
url.workspace = true

[dev-dependencies]
tracing.workspace = true
